# zk-checkpoint

./: .env.example  Cargo.toml  README.md
consensus-proof/: Cargo.toml
consensus-proof/src/: checkpoint.rs  helper.rs  lib.rs  types.proto  types.rs
contracts/src/: PoSVerifier.sol  RootChainInfo.sol  Verifier.sol
elf/: checkpoint-proof  riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs
operator/: Cargo.toml  build.rs  inputs.json
operator/src/: contract.rs  lib.rs  types.rs  utils.rs
program/: Cargo.toml
program/src/: checkpoint.rs  lib.rs  main.rs  types.proto  types.rs
