[workspace]
members = [
    "program",
    "operator", 
    # "lib"
]
resolver = "2"

[workspace.dependencies]
sp1-zkvm = "2.0.0"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }
sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }

# alloy
alloy-primitives = { version = "0.8.0", features = ["serde"] }
alloy-sol-types = { version = "0.8" }
alloy-sol-macro = { version = "0.8" }

# reth
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
    "secp256k1"
] }

serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
reqwest = { version = "0.12.7", features = ["json"] }
eyre = "0.6"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
prost = "0.13.1"
prost-types = "0.13.1"
hex = "0.4.3"
base64 = "0.22.1"
bytes = "1.7.1"
bincode = "1.3.3"
sha2 = "0.10.8"

# tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
# crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
# tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
# ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
# secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.1" }
# substrate-bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.6.0" }
