[package]
name = "zk-checkpoint-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[dependencies]
zk-checkpoint-lib = { path = "../lib" }

sp1-sdk.workspace = true
sp1-cc-client-executor.workspace = true
sp1-cc-host-executor.workspace = true

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
clap.workspace = true
dotenv.workspace = true
url.workspace = true
bincode.workspace = true
ethers.workspace = true
base64.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-provider.workspace = true
alloy-sol-types.workspace = true

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }