[package]
name = "zk-checkpoint-program"
version = "0.1.0"
edition = "2021"

[dependencies]
zk-checkpoint-lib = { path = "../lib" }
sp1-zkvm.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true

reth-primitives.workspace = true

serde_json.workspace = true
serde.workspace = true
prost.workspace = true
prost-types.workspace = true
hex.workspace = true
base64.workspace = true
bytes.workspace = true

[build-dependencies]
prost-build = "0.13.1"